about page design

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,6 +83,9 @@ img {
     }
   }
   &-inner {
+    background: $bg-image no-repeat 20% 30% / cover;
+    height: 5.5rem;
+    border-bottom: 3px solid $main-color;
   }
 }
 
@@ -202,6 +205,40 @@ img {
       &:hover {
         background: $main-color;
       }
+    }
+  }
+}
+
+// about
+#about {
+  &-a {
+    .about-info {
+      display: grid;
+      grid-template-areas: "bioimage bio bio" "aw1 aw2 aw3";
+      grid-gap: 1.2rem;
+    }
+    .bio-image {
+      grid-area: bioimage;
+    }
+    .bio {
+      grid-area: bio;
+      border-left: 3px solid $main-color;
+      padding: 0.8rem;
+    }
+    .education-1 {
+      grid-area: aw1;
+    }
+    .education-2 {
+      grid-area: aw2;
+    }
+    .education-3 {
+      grid-area: aw3;
+    }
+    .education-1 .fas,
+    .education-2 .fas,
+    .education-3 .fas {
+      color: $main-color;
+      margin: 1rem;
     }
   }
 }
