--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -37,6 +37,25 @@ input[class^="btn-"]:hover {
   background-color: $main-color;
 }
 
+// Backgrounds
+.bg {
+  &-main {
+    background: $main-color;
+    color: set-text-color;
+  }
+  &-dark {
+    background: $dark-color;
+    color: set-text-color;
+  }
+  &-light {
+    background: $light-color;
+    color: set-text-color;
+  }
+  &-medium {
+    background: $medium-color;
+    color: set-text-color;
+  }
+}
 .lead {
   font-size: 1.3rem;
   margin-bottom: 2rem;
