--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "config";
 @import "utility";
+@import "item_grid";
 * {
   margin: 0;
   padding: 0;
@@ -239,6 +240,22 @@ img {
     .education-3 .fas {
       color: $main-color;
       margin: 1rem;
+    }
+  }
+  &-b {
+    .progress {
+      overflow: hidden;
+      height: 20px;
+      background: $medium-color;
+      border-radius: 5px;
+      margin-bottom: 0.6rem;
+
+      div {
+        height: 100%;
+        color: #fff;
+        text-align: center;
+        background-color: $main-color;
+      }
     }
   }
 }
