--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -112,5 +112,5 @@ input[class^="btn-"]:hover {
   text-align: center;
   font-weight: 100;
   text-transform: uppercase;
-  color: $dark-color;
+  color: #fff;
 }
